# BiliMusic_R

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: extend_card.dart  mini_card.dart  slidable_item.dart
lib/components/navigation/: bottombar.dart  modules.dart  sidebar.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  queue_handler.dart  task_modules.dart
lib/src/rust/api/: modules.dart  query.dart  simple.dart  task_handler.dart
lib/views/: download_view.dart  settings_view.dart  space_view.dart
lib/views/download_views.dart/: creat_task_view.dart  edit_temp_view.dart  query_task_view.dart  queue_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/bilibili/: Cargo.toml
rust/bilibili/src/: collection.rs  downloader.rs  lib.rs  modules.rs  task_modules.rs  video.rs
rust/src/: app_state.rs  frb_generated.rs  lib.rs  query_handler.rs  queue_handler.rs  task_modules.rs  utils.rs
rust/src/api/: mod.rs  modules.rs  query.rs  simple.rs  task_handler.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_bili_music_r.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_bili_music_r.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
