[package]
name = "rust_lib_bili_music_r"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bilibili",]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
bilibili ={ path = "./bilibili" }
once_cell = "1.21.3"
serde = "1.0.228"
anyhow = "1.0.100"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[package.metadata.flutter_rust_bridge.macos]
copy_to = "../build/macos/Build/Products/Debug/rust_lib_bili_music_r/librust_lib.a"

