[package]
name = "bilibili"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
num_enum = "0.7.4"
md5 = "0.8.0"
rand_agents = "1.0.0"
chrono = "0.4.42"
futures-util = "0.3.31"
image = { version = "0.25.8", features = ["png", "jpeg", "serde"] }
once_cell = "1.21.3"
regex = "1.11.3"
anyhow = "1.0.100"